fix spacing for help links and search options by adding line-height
git-svn-id: https://svn.library.cornell.edu/cul7theme/trunk@558 29d2e8ee-217f-479a-8a37-9775d62f972e

--- a/css/cul/_search.scss
+++ b/css/cul/_search.scss
@@ -135,7 +135,10 @@
 	margin-top: 30px;
 	border-top: 1px solid #444;
 	overflow: hidden;
-	a { color: #dedede; } // TODO: add variable for this color
+	a { 
+		line-height: 1.2em;
+		color: #dedede; // TODO: add variable for this color
+	} 
 	.dropdown-menu { 
 		background: rgba(0, 0, 0, 1); 
 		text-align: left;
